--- a/options.html
+++ b/options.html
@@ -3,9 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Extensions Options</title>
+    <title>Spamurai Options</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            padding: 20px;
+            max-width: 600px;
+            margin: 0 auto;
+        }
+        h1 {
+            color: #333;
+        }
+        .option-group {
+            margin: 20px 0;
+            padding: 15px;
+            background: #f5f5f5;
+            border-radius: 5px;
+        }
+        label {
+            display: block;
+            margin: 10px 0;
+        }
+    </style>
 </head>
 <body>
     <h1>Spamurai Options</h1>
+    <div class="option-group">
+        <h2>Coming Soon</h2>
+        <p>Customizable keyword lists and detection settings will be available in a future update.</p>
+    </div>
 </body>
 </html>
