fix: detect video switch properly and avoid scanning comments twice

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,7 +8,7 @@
     <script src="popup.js" defer></script>
 </head>
 <body>
-    <h1>Spamurai</h1>
+    <h1>SpamuraiAI</h1>
     <h2>spam detection at a glance!</h2>
 
    <div id="summary-section">
