Add feature for video reloading, and dynamic comments

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -8,6 +8,8 @@
     <script src="popup.js" defer></script>
 </head>
 <body>
+    <!-- Add this to your popup.html -->
+<div id="status-message" style="display: none; padding: 8px; margin: 8px 0; background: #fff3cd; border: 1px solid #ffc107; border-radius: 4px; font-size: 12px;"></div>
     <h1>Spamurai</h1>
     <h2>spam detection at a glance!</h2>
 
