powered-by-text-change

--- a/popup/popup.html
+++ b/popup/popup.html
@@ -46,7 +46,7 @@
                     Report Feedback
             </a>
         </div>
-            <p id="powered-by">powered by Gemini Nano</p>
+            <p id="powered-by"></p>
     </footer>
 </body>
 </html>
